--- a/demo.html
+++ b/demo.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
-<title>State store demo</title>
+<title>&lt;bind-state&gt; demo</title>
 
 <script type="module" src="./index.js"></script>
 
-<state-store data-name="World" data-admin!>
+<bind-state data-name="World" data-admin!>
   
   <input type="text"
     data-bind="name"
@@ -17,4 +17,4 @@
 
   <div>Is Administrator: <span data-bind="admin"></span></div>
 
-</state-store>
+</bind-state>
